fixed line-break in header and text color on paragraph in cards

--- a/src/app/madame-misfortune/madame.module.css
+++ b/src/app/madame-misfortune/madame.module.css
@@ -43,9 +43,11 @@
   color: #ffc85f;
   margin: 0 0 2rem;
 }
+.header p {
+  color: white;
+}
 .header p,
 .cards p {
-  color: white;
   font-size: 1.6rem;
   line-height: 160%;
   font-weight: 400;
